--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "build:routes": "mkdir -p src/routes && npx tsoa routes",
-    "build:swagger": "mkdir -p api && mkdir -p api/dist && npx tsoa swagger",
+    "build:swagger": "mkdir -p api/dist && npx tsoa swagger",
     "build:ts": "tsc -p src",
     "build:all": "npm run build:routes && npm run build:swagger && npm run build:ts",
     "serve": "node dist/main.js",
