--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:routes": "mkdir -p src/routes && npx tsoa routes",
     "build:swagger": "mkdir -p api/dist && npx tsoa swagger",
-    "build:ts": "tsc -p src",
+    "build:ts": "npx tsc -p src",
     "build:all": "npm run build:routes && npm run build:swagger && npm run build:ts",
     "serve": "node dist/main.js",
     "start": "npm run build:all && npm run serve"
