--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@types/swagger-ui-express": "^4.1.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.13",
     "tsoa": "^3.2.1",
     "typescript": "^3.9.5"
