--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Eric Weischedel",
   "dependencies": {
     "@types/swagger-ui-express": "^4.1.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "swagger-ui-express": "^4.1.4"
