--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "author": "Eric Weischedel",
   "dependencies": {
+    "@types/mongoose": "^5.7.36",
     "@types/swagger-ui-express": "^4.1.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.1",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
