--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "author": "Eric Weischedel",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
     "@types/mongoose": "^5.7.36",
     "@types/swagger-ui-express": "^4.1.2",
     "dotenv": "^8.2.0",
