--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hapi/boom": "^9.1.0",
     "@types/mongoose": "^5.7.36",
     "@types/swagger-ui-express": "^4.1.2",
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -23,6 +24,7 @@
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.13",
     "tsoa": "^3.2.1",
