create add contact endpoint

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,6 +3,7 @@
     "experimentalDecorators": true,
     "outDir": "../dist",
     "baseUrl": "",
-    "module": "commonjs"
+    "module": "commonjs",
+    "esModuleInterop": true
   },
 }
