--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.1",
     "swagger-ui-express": "^4.1.4"
   },
@@ -28,6 +29,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^14.0.13",
     "tsoa": "^3.2.1",
     "typescript": "^3.9.5"
