--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hapi/boom": "^9.1.0",
     "@types/mongoose": "^5.7.36",
     "@types/swagger-ui-express": "^4.1.2",
+    "aws-sdk": "^2.782.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
