--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:ts": "tsc -p src",
     "build": "npm run build:routes && npm run build:swagger && npm run build:ts",
     "serve": "node dist/index.js",
+    "format": "prettier --write src/",
     "start": "npm run build && npm run serve",
     "test": "jest"
   },
@@ -36,7 +37,7 @@
     "@types/swagger-ui-express": "^4.1.2",
     "jest": "^26.6.3",
     "mkdirp": "^1.0.4",
-    "prettier": "2.1.2",
+    "prettier": "^2.1.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "tsoa": "^3.2.1",
