--- a/package.json
+++ b/package.json
@@ -28,16 +28,18 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/jest": "^26.0.18",
+    "@types/jest": "^26.0.19",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.10.2",
     "@types/node": "^14.0.13",
+    "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.2",
     "jest": "^26.6.3",
     "mkdirp": "^1.0.4",
     "prettier": "^2.1.2",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "tsoa": "^3.2.1",
