--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   node: circleci/node@1.1.6
   heroku: circleci/heroku@1.0.1
 jobs:
-  build:
+  build_and_test:
     executor: node/default
     steps:
       - checkout
@@ -11,13 +11,6 @@ jobs:
           steps:
             - run: npm install
             - run: npm run build
-  test:
-    executor: node/default
-    steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
             - run: npm test
   deploy:
     executor: heroku/default
@@ -30,12 +23,10 @@ jobs:
 workflows:
   default:
     jobs:
-      - build
-      - test
+      - build_and_test
       - deploy:
           requires:
-            - build
-            - test
+            - build_and_test
           filters:
             branches:
               only: master
