--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.1",
+    "nodemailer": "^6.4.17",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
@@ -34,6 +35,9 @@
     "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.10.2",
     "@types/node": "^14.0.13",
+    "@types/nodemailer": "^6.4.0",
+    "@types/nodemailer-direct-transport": "^1.0.31",
+    "@types/nodemailer-smtp-transport": "^2.7.4",
     "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.2",
     "jest": "^26.6.3",
